# logtui

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: app.rs  args.rs  editor.rs  input.rs  main.rs  model.rs  ui.rs
src/app/: columns.rs  field_view.rs  mod.rs  state.rs
